[gd_scene load_steps=20 format=4 uid="uid://37r7jrvgw1bl"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_sj8iy"]
[ext_resource type="PackedScene" uid="uid://beqq483gu33ch" path="res://Player/player.tscn" id="1_yia84"]
[ext_resource type="PackedScene" uid="uid://l7mqcin4jiwt" path="res://Mob/mob.tscn" id="2_60guw"]
[ext_resource type="Texture2D" uid="uid://c6bxsun31pq1j" path="res://assets/deco/03.png" id="4_k1w2x"]
[ext_resource type="Texture2D" uid="uid://bm1o3k12juw65" path="res://assets/deco/06.png" id="5_oc62m"]
[ext_resource type="Texture2D" uid="uid://bbqwp6wbckkuq" path="res://assets/deco/09.png" id="6_55ula"]
[ext_resource type="Texture2D" uid="uid://dwll0ptn2cfhn" path="res://assets/deco/11.png" id="7_qrn41"]
[ext_resource type="Texture2D" uid="uid://sp16c7ljtuiq" path="res://assets/deco/13.png" id="8_4ey3y"]
[ext_resource type="Texture2D" uid="uid://bdqok3hjgwpha" path="res://assets/deco/14.png" id="9_kod40"]
[ext_resource type="Texture2D" uid="uid://beux336fxeih3" path="res://assets/terrain/Tilemap_Flat.png" id="10_ixtq2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rpvuf"]
texture = ExtResource("4_k1w2x")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mvme1"]
texture = ExtResource("5_oc62m")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_71jsa"]
texture = ExtResource("6_55ula")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t15dm"]
texture = ExtResource("7_qrn41")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kbx4a"]
texture = ExtResource("8_4ey3y")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i7rht"]
texture = ExtResource("9_kod40")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1fuow"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_rpvuf")
sources/1 = SubResource("TileSetAtlasSource_mvme1")
sources/2 = SubResource("TileSetAtlasSource_71jsa")
sources/3 = SubResource("TileSetAtlasSource_t15dm")
sources/4 = SubResource("TileSetAtlasSource_kbx4a")
sources/5 = SubResource("TileSetAtlasSource_i7rht")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_muub0"]
texture = ExtResource("10_ixtq2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSet" id="TileSet_mmik8"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_muub0")

[node name="Main" type="Node"]
script = ExtResource("1_sj8iy")
mob_scene = ExtResource("2_60guw")

[node name="Player" parent="." instance=ExtResource("1_yia84")]

[node name="MobTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(360, 360)

[node name="MobSpawn1" type="Marker2D" parent="."]
position = Vector2(360, 0)
rotation = 1.5708

[node name="MobSpawn2" type="Marker2D" parent="."]
position = Vector2(720, 360)
rotation = 3.14159

[node name="MobSpawn3" type="Marker2D" parent="."]
position = Vector2(360, 720)
rotation = 4.71239

[node name="MobSpawn4" type="Marker2D" parent="."]
position = Vector2(0, 360)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAADAAAAAQAAAAAAAAAKAAcAAQAAAAAAAAAHAAoAAQAAAAAAAAAAAAMAAQAAAAAAAAACAAAAAgAAAAAAAAABAAAAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAQAAAAAAAAAKAAAAAgAAAAAAAAAAAAcAAQAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAAAAgAAgAAAAAAAAADAAoAAQAAAAAAAAAKAAoAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAoAAgAAAAAAAAAIAAoAAgAAAAAAAAACAAoAAgAAAAAAAAABAAoAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAkAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_1fuow")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAAAAAABAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAACAAAAAAABAAAAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAoAAAAAAAIAAAAKAAoAAAACAAIAAAAKAAAAAAACAAAAAAAKAAEAAAACAAEAAAAKAAIAAAACAAEAAAAKAAMAAAACAAEAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAAKAAcAAAACAAEAAAAKAAgAAAACAAEAAAAKAAkAAAACAAEAAAAJAAAAAAABAAAAAAAIAAAAAAABAAAAAAAHAAAAAAABAAAAAAAGAAAAAAABAAAAAAAFAAAAAAABAAAAAAAEAAAAAAABAAAAAAADAAAAAAABAAAAAAAJAAoAAAABAAIAAAAIAAoAAAABAAIAAAAHAAoAAAABAAIAAAAGAAoAAAABAAIAAAAFAAoAAAABAAIAAAAEAAoAAAABAAIAAAADAAoAAAABAAIAAAACAAoAAAABAAIAAAABAAoAAAABAAIAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAIAAcAAAABAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAJAAkAAAABAAEAAAAJAAgAAAABAAEAAAAHAAkAAAABAAEAAAAGAAkAAAABAAEAAAAFAAkAAAABAAEAAAAEAAkAAAABAAEAAAADAAkAAAABAAEAAAACAAkAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAABAAEAAAABAAUAAAABAAEAAAABAAQAAAABAAEAAAABAAMAAAABAAEAAAADAAIAAAABAAEAAAAEAAIAAAABAAEAAAAFAAIAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAGAAMAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAgAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAFAAYAAAABAAEAAAAFAAUAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAEAAMAAAABAAEAAAADAAMAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAADAAQAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAADAAUAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAADAAYAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAFAAcAAAABAAEAAAAFAAgAAAABAAEAAAAEAAgAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAACAAcAAAABAAEAAAACAAgAAAABAAEAAAABAAcAAAABAAEAAAABAAYAAAABAAEAAAA=")
tile_set = SubResource("TileSet_mmik8")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
